[workspace]
members = [
    "IERC3156-traits",
    "contracts/flash-lender",
    "contracts/flash-borrower",
]

# Optional, to avoid redundant target dirs for each contract
[workspace.package]
edition = "2021"

[workspace.dependencies]
ink = { version = "5.1.1", default-features = false }
ink_e2e = { version = "5.1.1" }