[workspace]
members = [
    "IERC20",
    "IERC3156",
    "contracts/flash_lender",
    "contracts/flash_borrower",
]

# Optional, to avoid redundant target dirs for each contract
[workspace.package]
edition = "2021"

[workspace.dependencies]
ink = { version = "5.1.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
ink_e2e = { version = "5.1.1" }