[workspace]
members = [
    "flash_lender",
    "flash_mint",
]

[package]
name = "contracts"
version = "0.1.0"
authors = ["lucas", "raa", "juan"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
ink = { version = "5.1.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
