[package]
name = "flash_lender"
version = "0.1.0"
<<<<<<<< HEAD:contracts/flash_lender/Cargo.toml
authors = ["Lucas Grasso<lucasgrassoramos@gmail.com>"]
========
authors = ["lucas", "raa", "juan"]
>>>>>>>> 28fce48 (feat: flash_mint contract scaffolding):flash-loan/Cargo.toml
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
