[package]
name = "ierc3156"
version = "0.1.0"
authors = ["Lucas Grasso <lucasgrassoramos@gmail.com>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
ierc20 = { path = "../ierc20", default-features = false }
scale-info = { workspace = true }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ierc20/std"
]