[package]
name = "flash-borrower"
version = "0.1.0"
authors = ["Juan Villarejo <juan.villarejo.ortiz@gmail.com>", "Lucas Grasso <lucasgrassoramos@gmail.com>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
IERC3156Traits = { path = "../../IERC-3156-Traits", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"ink/std",
	"IERC3156Traits/std",
]
ink-as-dependency = []
e2e-tests = []
