[package]
name = "flash_borrower"
version = "0.1.0"
authors = ["Juan Villarejo <juan.villarejo.ortiz@gmail.com>", "Lucas Grasso <lucasgrassoramos@gmail.com>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
IERC3156_traits = { path = "../../IERC3156_traits", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"ink/std",
	"IERC3156_traits/std",
]
ink-as-dependency = []
e2e-tests = []
