[package]
name = "flash_borrower"
version = "0.1.0"
authors = ["Juan Villarejo <juan.villarejo.ortiz@gmail.com>", "Lucas Grasso <lucasgrassoramos@gmail.com>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
scale-info = { workspace = true }
IERC20 = { path = "../../IERC20", default-features = false }
IERC3156 = { path = "../../IERC3156", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"ink/std",
	"IERC20/std",
	"IERC3156/std",
]
ink-as-dependency = []
e2e-tests = []
