[package]
name = "flash_borrower"
version = "0.1.0"
authors = ["Juan Villarejo <juan.villarejo.ortiz@gmail.com>", "Lucas Grasso <lucasgrassoramos@gmail.com>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
scale-info = { workspace = true }
ierc20 = { path = "../../ierc20", default-features = false }
ierc3156 = { path = "../../ierc3156", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"ink/std",
	"ierc20/std",
	"ierc3156/std",
]
ink-as-dependency = []
e2e-tests = []
