[package]
name = "flash_lender"
version = "0.1.0"
authors = ["Lucas Grasso<lucasgrassoramos@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "flash_borrower/std",
]
ink-as-dependency = []
e2e-tests = []
