[package]
name = "flash_lender"
version = "0.1.0"
authors = ["Lucas Grasso<lucasgrassoramos@gmail.com>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
scale-info = { workspace = true }
IERC3156 = { path = "../../IERC3156", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "IERC3156/std",
]
ink-as-dependency = []
e2e-tests = []
